--- a/bmw.html
+++ b/bmw.html
@@ -6,14 +6,15 @@
         table {
             border-collapse: collapse;
             width: 50%;
+            background-color: rgba(241, 210, 30, 0.589);
         }
         th, td {
-            border: 1px solid #333;
+            border: 1px solid #24914d;
             padding: 8px;
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #e5ff00;
         }
     </style>
 </head>
